[gd_scene load_steps=12 format=3 uid="uid://xu1fxxtur4gr"]

[ext_resource type="Script" uid="uid://cco6msmvwgvyw" path="res://scripts/Spawner.gd" id="1_4ivw0"]
[ext_resource type="Script" uid="uid://cgvyj5hb4kkx7" path="res://scripts/nivel.gd" id="1_slt22"]
[ext_resource type="PackedScene" uid="uid://7upbxtimdqgd" path="res://scenes/player/Player.tscn" id="3_kp1hu"]
[ext_resource type="Texture2D" uid="uid://drp6dof8pyxqu" path="res://assets/art/marcador.png" id="6_kp1hu"]
[ext_resource type="FontFile" uid="uid://beq5aieqak874" path="res://assets/fonts/OpenSans-Medium.ttf" id="7_iln4m"]
[ext_resource type="FontFile" uid="uid://cxjgkcay2yo1q" path="res://assets/fonts/OpenSans-Bold.ttf" id="8_iln4m"]
[ext_resource type="Texture2D" uid="uid://7hn0hpay5j7k" path="res://assets/art/ciudad.png" id="9_hilxh"]
[ext_resource type="Script" uid="uid://da5g61ot8hdme" path="res://scripts/medallas/spawner_medalla.gd" id="9_xyw2i"]
[ext_resource type="PackedScene" uid="uid://cwc77gxf1258d" path="res://scenes/obstacles/coin.tscn" id="10_s8vi6"]
[ext_resource type="AudioStream" uid="uid://cfd1witcmosci" path="res://assets/sounds/sport-epic-race-loop-292071.mp3" id="11_vd78r"]
[ext_resource type="AudioStream" uid="uid://74ic1nua0ix5" path="res://assets/sounds/cricket-sport-19432.mp3" id="12_3lgjc"]

[node name="Lvl1-city" type="Node2D"]
script = ExtResource("1_slt22")

[node name="SpawnerCono" type="Node2D" parent="."]
z_index = 1
script = ExtResource("1_4ivw0")

[node name="SpawnTimer" type="Timer" parent="SpawnerCono"]

[node name="SpawnerPelota" type="Node2D" parent="."]
z_index = 1
script = ExtResource("1_4ivw0")

[node name="SpawnTimer" type="Timer" parent="SpawnerPelota"]

[node name="Player" parent="." instance=ExtResource("3_kp1hu")]
z_index = 2

[node name="CameraFija" type="Camera2D" parent="."]
position = Vector2(575, 325)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(550, 425)
texture = ExtResource("9_hilxh")

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(505.246, 337.625)
scale = Vector2(0.677302, 0.73806)
texture = ExtResource("6_kp1hu")

[node name="Puntos" type="Label" parent="UI"]
clip_contents = true
offset_left = 181.0
offset_top = 341.0
offset_right = 288.0
offset_bottom = 421.0
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("7_iln4m")
theme_override_font_sizes/font_size = 50
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Monedas" type="Label" parent="UI"]
offset_left = 715.0
offset_top = 341.0
offset_right = 822.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("7_iln4m")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="TituloPuntos" type="Label" parent="UI"]
offset_left = 119.0
offset_top = 281.0
offset_right = 334.0
offset_bottom = 344.0
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("7_iln4m")
theme_override_font_sizes/font_size = 40
text = "PUNTOS:"
metadata/_edit_use_anchors_ = true

[node name="TituloMedallas" type="Label" parent="UI"]
offset_left = 684.0
offset_top = 281.0
offset_right = 892.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("7_iln4m")
theme_override_font_sizes/font_size = 40
text = "MEDALLAS:"
metadata/_edit_use_anchors_ = true

[node name="Tiempo" type="Label" parent="UI"]
anchors_preset = -1
anchor_right = 0.119201
anchor_bottom = 0.0689259
offset_left = 375.0
offset_top = 268.0
offset_right = 374.68
offset_bottom = 292.336
theme_override_fonts/font = ExtResource("7_iln4m")
theme_override_font_sizes/font_size = 50
text = "0"
metadata/_edit_use_anchors_ = true

[node name="PuntajeTimer" type="Timer" parent="."]
autostart = true

[node name="Dificultad" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="SpawnerMedalla" type="Node2D" parent="."]
script = ExtResource("9_xyw2i")
medalla_scene = ExtResource("10_s8vi6")

[node name="MedallaTimer" type="Timer" parent="SpawnerMedalla"]

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vd78r")
autoplay = true
parameters/looping = true

[node name="Gritos" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_3lgjc")
volume_db = -7.0
autoplay = true
parameters/looping = true

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" type="Label" parent="GameOver"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.474
anchor_right = 0.52
anchor_bottom = 0.728
offset_left = -312.0
offset_top = 8.84796
offset_right = 431.96
offset_bottom = 9.25598
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.768627, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_iln4m")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 171
clip_text = true
uppercase = true

[connection signal="timeout" from="SpawnerCono/SpawnTimer" to="SpawnerCono" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnerPelota/SpawnTimer" to="SpawnerPelota" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PuntajeTimer" to="." method="_on_puntaje_timer_timeout"]
[connection signal="timeout" from="Dificultad" to="." method="_on_dificultad_timeout"]
[connection signal="timeout" from="SpawnerMedalla/MedallaTimer" to="SpawnerMedalla" method="_on_medalla_timer_timeout"]
